--- a/style.css
+++ b/style.css
@@ -24,11 +24,23 @@ body{
 }
 .logo{
     /* display: inline-block; */
+    position: relative;
     text-decoration: none;
     font-size: 25px;
     color: #ededed;
     font-weight: 600px;
     
+}
+.logo::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: .2s;
 }
 
  .logocolor{
@@ -54,6 +66,9 @@ body{
 
 .home{
     height: 100vh;
+    background-image: url(Images/Background-image.png);
+    background-size: cover;
+    /* background-position: center; */
     display: flex;
     align-items: center;
     padding:0px 10%;
@@ -64,20 +79,60 @@ body{
     max-width: 600px;
 }
 .home-content h1{
+    position: relative;
     font-size: 56px;
     font-weight: 700;
     line-height: 1.2;
 }
+
+.home-content h1::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: .5s;
+}
 .home-content h3{
+    position: relative;
     font-size: 32px;
     font-weight: 700;
     color: #00abf0;
 }
+
+.home-content h3::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1s;
+}
 .home-content p{
+    position: relative;
     font-size: 16px;
     margin: 20px 0 30px;
 }
+
+.home-content p::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.3s;
+}
 .home-content .btn-box{
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 345px;
@@ -85,6 +140,20 @@ body{
     height: 50px;
 
 }
+.home-content .btn-box::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.5s;
+    z-index: 2;
+}
+
+
 .btn-box a{
     position: relative;
     width: 150px;
@@ -132,4 +201,95 @@ body{
 .btn-box a:hover::before{
     width: 100%;
 
+}
+.home-icon{
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    /* background:red; */
+    display: flex;
+    justify-content: space-between;
+
+}
+.home-icon::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.5s;
+    z-index: 2;
+}
+
+.home-icon a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    text-decoration: none;
+    border: 2px solid #00abf0;
+    font-size: 20px;
+    text-align: center;
+    color:#00abf0;
+    border-radius: 50%;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.home-icon a:hover{
+    color: #081b29;
+}
+
+.home-icon a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background:#00abf0;
+    z-index: -1;
+    transition: .5s;
+}
+.home-icon a:hover::before{
+    width: 100%;
+}
+.home-imgHover{
+    position: absolute;
+    top: 0;
+    right: 30px;
+    width: 600px;
+    height: 100%;
+    background: transparent;
+    /* border: 2px solid red; */
+    transition: 2s;
+}
+.home-imgHover:hover{
+    background-color: #081b29;
+    opacity: .8;
+}
+.home-imgHover::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#081b29;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.7s;
+    z-index: 2;
+}
+
+@keyframes showRight{
+    100%{
+        width: 0;
+    }
 }
