--- a/style.css
+++ b/style.css
@@ -293,3 +293,34 @@ body{
         width: 0;
     }
 }
+
+
+/* Services Section */
+.container{
+    display: flex;
+    height: 700px;
+    /* width: 100; */
+    /* margin: 0 10px; */
+    align-items: center;
+    padding: 0 20px;
+    
+    /* justify-content: center; */
+    justify-content: space-between;
+   
+}
+.web-developer,.web-designer,.front-end-developer,.back-end-developer{
+    border: 1px solid #00abf0;
+    /* box-shadow: #00abf0; */
+    padding-left: 10px;
+    width:300px;
+    height: 300px;
+    background-color:transparent;
+   
+}   
+.container p{
+    text-align:center;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    /* justify-content: flex-end; */
+}
